[gd_scene load_steps=10 format=2]

[ext_resource path="res://Title.gd" type="Script" id=1]
[ext_resource path="res://background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ragBall_Logo.png" type="Texture" id=3]
[ext_resource path="res://ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://waves_sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/test1.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitleImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 505, 220 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleImage:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleImage:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.548096, 0.548096 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ball:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 441, 166 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ball:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ball:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.84, 1.84 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "title"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TitleImage:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 505, 220 ), Vector2( 505, 220 ), Vector2( 505, 220 ), Vector2( 505, 220 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleImage:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -4.15841, 0.0, 4.84885 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleImage:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.705017, 0.705017 ), Vector2( 0.999935, 0.999935 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ball:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 441, 166 ), Vector2( 380, 128 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ball:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 163.3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ball:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.84, 1.84 ), Vector2( 3.22937, 3.22937 ) ]
}

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 441.0
margin_top = 319.0
margin_right = 482.0
margin_bottom = 346.0
rect_scale = Vector2( 1.64607, 1.64607 )
theme = ExtResource( 5 )
text = "start"

[node name="Quit" type="Button" parent="."]
margin_left = 441.0
margin_top = 444.0
margin_right = 482.0
margin_bottom = 471.0
rect_scale = Vector2( 2.03204, 1.67204 )
theme = ExtResource( 5 )
text = "quit"

[node name="background" parent="." instance=ExtResource( 2 )]
position = Vector2( 4, 14 )

[node name="TitleImage" type="Sprite" parent="."]
position = Vector2( 505, 220 )
scale = Vector2( 0.548096, 0.548096 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/title = SubResource( 2 )

[node name="ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 441, 166 )
scale = Vector2( 1.84, 1.84 )

[node name="RigidBody2D" parent="ball" index="1"]
mode = 1

[node name="title_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.37

[node name="waves_sound" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]

[editable path="ball"]
